--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="https://ramonpeter.github.io" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<h1><strong>Ramon P. Winterhalder</strong></h1>
+					Postdoctoral Researcher in Physics
+
 				</div>
 			</header>
 
@@ -79,6 +79,7 @@
 					</section>
 
 				<!-- Three -->
+				<!--
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -115,6 +116,7 @@
 							</div>
 						</div>
 					</section>
+				-->
 
 				<!-- Four -->
 				<!--
@@ -442,7 +444,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/ramonwinterhalder/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/ramonpeter" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="rpw@mailbox.org" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:ramon.winterhalder@mailbox.org" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Ramon Winterhalder</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
