--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<h1><strong>Ramon Winterhalder</strong></h1>
 					<p>Postdoctoral Researcher in Physics</p>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/ramonwinterhalder/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/ramonpeter" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:ramon.winterhalder@mailbox.org" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ramonwinterhalder/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/ramonpeter" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<li><a href="mailto:ramon.winterhalder@mailbox.org" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</header>
