--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 									</div>
 								  </li>
 
-								<li>
+								<!--<li>
 									<i class="fa-li fa fa"></i>
-									<a href="data/CV.pdf">Resume</a></li>
+									<a href="data/CV.pdf">Resume</a></li>-->
 								
 							  </ul>
 							  
