--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+										Institut für Theoretische Physik<br />
 										Philosophenweg 16<br />
 										69120 Heidelberg<br />
 										Germany
