--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180", href="apple-touch-icon.png"/>
 	</head>
 	<body class="is-preload">
 
@@ -37,9 +39,9 @@
 							<h2>Biography</h2>
 						</header>
 						<p>
-						I am <a href="https://www.heika-research.de">HeiKa</a> postdoctoral researcher 
-						jointly in the groups of <a href="https://www.thphys.uni-heidelberg.de/~plehn/">Tilman Plehn</a> in Heidelberg
-						and <a href="https://www.itp.kit.edu/memberpages/heinrich">Gudrun Heinrich</a> in Karlsruhe.
+						I am <a href="https://www.heika-research.de" target="_blank">HeiKa</a> postdoctoral researcher 
+						jointly in the groups of <a href="https://www.thphys.uni-heidelberg.de/~plehn/" target="_blank">Tilman Plehn</a> in Heidelberg
+						and <a href="https://www.itp.kit.edu/memberpages/heinrich" target="_blank">Gudrun Heinrich</a> in Karlsruhe.
 						I work on the intersection of particle physics and machine learning. My research
 					    aims to utterly establish data-driven techniques in high-energy physics and to
 						enhance standard simulation methods with generative neural networks.
@@ -121,6 +123,7 @@
 							</div>
 					</section>
 
+
 				<!-- Two -->
 				 
 					<section id="four">
@@ -134,9 +137,9 @@
 									Mathias Backes, Anja Butter, Tilman Plehn, Ramon Winterhalder:<br />
 									<b>How to GAN Event Unweighting</b>.<br />
 									<em>SciPost Phys. 10, 089 (2021)</em><br />
-									<a class="button primary small" href="data/publications/weightedgan.pdf" target="_blank">PDF</a>
-									<a class="button primary small" href="https://scipost.org/SciPostPhys.10.4.089" target="_blank">Journal</a>
-									<a class="button primary small" href="https://arxiv.org/abs/2012.07873" target="_blank">ArXiv</a>
+									<a href="data/publications/weightedgan.pdf" target="_blank">[PDF]</a>
+									<a href="https://scipost.org/SciPostPhys.10.4.089" target="_blank">[Journal]</a>
+									<a href="https://arxiv.org/abs/2012.07873" target="_blank">[ArXiv]</a>
 								</li>
 							</ul>
 
@@ -147,27 +150,27 @@
 									Armand Rousselot, Ramon Winterhalder, Lynton Ardizzone, Ullrich Köthe:<br />
 									<b>Invertible Networks or Partons to Detector and Back Again</b>.<br />
 									<em>SciPost Phys. 9, 074 (2020) </em><br />
-									<a class="button primary small" href="data/publications/cinn.pdf" target="_blank">PDF</a>
-									<a class="button primary small" href="https://scipost.org/SciPostPhys.9.5.074" target="_blank">Journal</a>
-									<a class="button primary small" href="https://arxiv.org/abs/2006.06685" target="_blank">ArXiv</a>
+									<a href="data/publications/cinn.pdf" target="_blank">[PDF]</a>
+									<a href="https://scipost.org/SciPostPhys.9.5.074" target="_blank">[Journal]</a>
+									<a href="https://arxiv.org/abs/2006.06685" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
 									Anja Butter, Tilman Plehn, Ramon Winterhalder: <br />
 									<b>How to GAN Event Subtraction</b>.<br />
 									<em>SciPost Phys. Core 3, 009 (2020) </em><br />
-									<a class="button primary small" href="data/publications/subgan.pdf" target="_blank">PDF</a>
-									<a class="button primary small" href="https://scipost.org/SciPostPhysCore.3.2.009" target="_blank">Journal</a>
-									<a class="button primary small" href="https://arxiv.org/abs/1912.08824" target="_blank">ArXiv</a>
+									<a href="data/publications/subgan.pdf" target="_blank">[PDF]</a>
+									<a href="https://scipost.org/SciPostPhysCore.3.2.009" target="_blank">[Journal]</a>
+									<a href="https://arxiv.org/abs/1912.08824" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
 									Marco Bellagente, Anja Butter, Gregor Kasieczka, Tilman Plehn, Ramon Winterhalder: <br />
 									<b>How to GAN away Detector Effects</b>.<br />
 									<em>SciPost Phys. 8, 070 (2020) </em><br />
-									<a class="button primary small" href="data/publications/fcgan.pdf" target="_blank">PDF</a>
-									<a class="button primary small" href="https://scipost.org/SciPostPhys.8.4.070" target="_blank">Journal</a>
-									<a class="button primary small" href="https://arxiv.org/abs/1912.00477" target="_blank">ArXiv</a>
+									<a href="data/publications/fcgan.pdf" target="_blank">[PDF]</a>
+									<a href="https://scipost.org/SciPostPhys.8.4.070" target="_blank">[Journal]</a>
+									<a href="https://arxiv.org/abs/1912.00477" target="_blank">[ArXiv]</a>
 								</li>
 							</ul>
 
@@ -177,9 +180,9 @@
 									Anja Butter, Tilman Plehn, Ramon Winterhalder: <br />
 									<b>How to GAN LHC Events</b>.<br />
 									<em>SciPost Phys. 7, 075 (2019) </em><br />
-									<a class="button primary small" href="data/publications/eventgan.pdf" target="_blank">PDF</a>
-									<a class="button primary small" href="https://scipost.org/SciPostPhys.7.6.075" target="_blank">Journal</a>
-									<a class="button primary small" href="https://arxiv.org/abs/1907.03764" target="_blank">ArXiv</a>
+									<a href="data/publications/eventgan.pdf" target="_blank">[PDF]</a>
+									<a href="https://scipost.org/SciPostPhys.7.6.075" target="_blank">[Journal]</a>
+									<a href="https://arxiv.org/abs/1907.03764" target="_blank">[ArXiv]</a>
 								</li>
 							</ul>
 
