--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="manifest" href="/site.webmanifest">
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 		<link rel="apple-touch-icon" sizes="180x180", href="apple-touch-icon.png"/>
 	</head>
 	<body class="is-preload">
