--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/ramonwinterhalder/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/ramonpeter" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
-						<li><a href="mailto:ramon.winterhalder@mailbox.org" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+						<li><a href="mailto:winterhalder@thphys.uni-heidelberg.de" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</header>
@@ -214,7 +214,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:ramon.winterhalder@mailbox.org">ramon.winterhalder@mailbox.org</a>
+										<a href="mailto:winterhalder@thphys.uni-heidelberg.de">winterhalder@thphys.uni-heidelberg.de</a>
 									</li>
 								</ul>
 							</div>
