--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						working jointly in the groups of <a href="https://www.thphys.uni-heidelberg.de/~plehn/" target="_blank">Tilman Plehn</a> in Heidelberg
 						and <a href="https://www.itp.kit.edu/memberpages/heinrich" target="_blank">Gudrun Heinrich</a> in Karlsruhe.
 						I work on the intersection of particle physics and machine learning. My research
-					    aims to utterly establish data-driven techniques in high-energy physics and to
+					        aims to fully establish data-driven techniques in high-energy physics and to
 						enhance standard simulation methods with generative neural networks.
 						</p>
 
