--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 							<h2>Biography</h2>
 						</header>
 						<p>
-						I am <a href="https://www.heika-research.de" target="_blank">HeiKa</a> postdoctoral researcher 
-						working jointly in the groups of <a href="https://www.thphys.uni-heidelberg.de/~plehn/" target="_blank">Tilman Plehn</a> in Heidelberg
-						and <a href="https://www.itp.kit.edu/memberpages/heinrich" target="_blank">Gudrun Heinrich</a> in Karlsruhe.
+						I am a postdoctoral researcher at the <a href="https://uclouvain.be/en/research-institutes/irmp/cp3CP3" target="_blank"> Centre for Cosmology, Particle Physics and Phenomenology (CP3)</a> 
+						in Louvain-la-Neuve.
 						I work on the intersection of particle physics and machine learning. My research
 					        aims to fully establish data-driven techniques in high-energy physics and to
 						enhance standard simulation methods with generative neural networks.
