Update affiliation and papers

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<h2>Biography</h2>
 						</header>
 						<p>
-						I am a postdoctoral researcher at the <a href="https://uclouvain.be/en/research-institutes/irmp/cp3CP3" target="_blank"> Centre for Cosmology, Particle Physics and Phenomenology (CP3)</a> 
+						I am a postdoctoral researcher at the <a href="https://uclouvain.be/en/research-institutes/irmp/cp3" target="_blank"> CP3</a> 
 						in Louvain-la-Neuve.
 						I work on the intersection of particle physics and machine learning. My research
 					        aims to fully establish data-driven techniques in high-energy physics and to
@@ -133,9 +133,21 @@
 						<div class="inner">
 							<h2>Publications</h2>
 							<p>This is a list of my publications in reverse-chronological order. All authors are listed alphabetically, 
-								following the convention in particle physics.</p>
+								following the convention in particle physics. Exceptions occure for pure ML papers.</p>
 							<ul class="">
 								<h3>2021</h3>
+								<li>
+									Miguel Arratia, Anja Butter, Mario Campanelli, Vincent Croft,  <br />
+									Dag Gillberg, Kristin Lohwasser, Bogdan Malaescu, Vinicius Mikuni, <br />
+									Benjamin Nachman, Juan Rojo, Jesse Thaler, Ramon Winterhalder:<br />
+									<b>Presenting Unbinned Differential Cross Section Results</b>.<br />
+									<a href="https://arxiv.org/abs/2109.13243" target="_blank">[ArXiv]</a>
+								</li>
+								<li>
+									Ramon Winterhalder, Marco Bellagente, Benjamin Nachman:<br />
+									<b>Latent Space Refinement for Deep Generative Models</b>.<br />
+									<a href="https://arxiv.org/abs/2106.00792" target="_blank">[ArXiv]</a>
+								</li>
 								<li>
 									Mathias Backes, Anja Butter, Tilman Plehn, Ramon Winterhalder:<br />
 									<b>How to GAN Event Unweighting</b>.<br />
