Update details and email-adress

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/ramonwinterhalder/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/ramonpeter" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
-						<li><a href="mailto:winterhalder@thphys.uni-heidelberg.de" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+						<li><a href="mailto:ramon.winterhalder@uclouvain.be" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</header>
@@ -214,10 +214,11 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										Institut für Theoretische Physik<br />
-										Philosophenweg 16<br />
-										69120 Heidelberg<br />
-										Germany
+										Centre for Cosmology, Particle Physics and Phenomenology - CP3 <br />
+										Université catholique de Louvain <br />
+										2, Chemin du Cyclotron - Box L7.01.05 <br />
+										B-1348 Louvain-la-Neuve<br />
+										Belgium
 									</li>
 								</ul>
 							</div>
@@ -225,7 +226,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:winterhalder@thphys.uni-heidelberg.de">winterhalder@thphys.uni-heidelberg.de</a>
+										<a href="mailto:ramon.winterhalder@uclouvain.be">ramon.winterhalder@uclouvain.be</a>
 									</li>
 								</ul>
 							</div>
