change contact section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
 					<section id="three">
 						<h2>Contact</h2>
 						<div class="row">
+							<div class="col-8 col-12-small">
+								<ul class="labeled-icons">
+									<li>
+										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										<a href="mailto:ramon.winterhalder@uclouvain.be">ramon.winterhalder@uclouvain.be</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="row">
 							<div class="col-8 col-12-small"> 
 								<ul class="labeled-icons">
 									<li>
@@ -221,14 +231,6 @@
 										2, Chemin du Cyclotron - Box L7.01.05 <br />
 										B-1348 Louvain-la-Neuve<br />
 										Belgium
-									</li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:ramon.winterhalder@uclouvain.be">ramon.winterhalder@uclouvain.be</a>
 									</li>
 								</ul>
 							</div>
