--- a/index.html
+++ b/index.html
@@ -141,12 +141,14 @@
 									Dag Gillberg, Kristin Lohwasser, Bogdan Malaescu, Vinicius Mikuni, <br />
 									Benjamin Nachman, Juan Rojo, Jesse Thaler, Ramon Winterhalder:<br />
 									<b>Presenting Unbinned Differential Cross Section Results</b>.<br />
+									<em>arXiv:2109.13243 [hep-ph]</em><br />
 									<a href="https://arxiv.org/abs/2109.13243" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
 									Ramon Winterhalder, Marco Bellagente, Benjamin Nachman:<br />
 									<b>Latent Space Refinement for Deep Generative Models</b>.<br />
+									<em>arXiv:2106.00792 [stat.ML]</em><br />
 									<a href="https://arxiv.org/abs/2106.00792" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
@@ -212,18 +214,7 @@
 					<section id="three">
 						<h2>Contact</h2>
 						<div class="row">
-							<div class="col-8 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:ramon.winterhalder@uclouvain.be">ramon.winterhalder@uclouvain.be</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<br />
-						<div class="row">
-							<div class="col-8 col-12-small"> 
+							<div class="col-7 col-12-small"> 
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
@@ -232,6 +223,14 @@
 										2, Chemin du Cyclotron - Box L7.01.05 <br />
 										B-1348 Louvain-la-Neuve<br />
 										Belgium
+									</li>
+								</ul>
+							</div>
+							<div class="col-5 col-12-small">
+								<ul class="labeled-icons">
+									<li>
+										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										<a href="mailto:ramon.winterhalder@uclouvain.be">ramon.winterhalder@uclouvain.be</a>
 									</li>
 								</ul>
 							</div>
