--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						in Louvain-la-Neuve.
 						I work on the intersection of particle physics and machine learning. My research
 					        aims to fully establish data-driven techniques in high-energy physics and to
-						enhance standard simulation methods with generative neural networks.
+						enhance standard simulation methods with (generative) neural networks.
 						</p>
 
 						<div class="row">
@@ -133,25 +133,38 @@
 						<div class="inner">
 							<h2>Publications</h2>
 							<p>This is a list of my publications in reverse-chronological order. All authors are listed alphabetically, 
-								following the convention in particle physics. Exceptions occure for pure ML papers.</p>
+								following the convention in particle physics. Exceptions occur for some of the papers.</p>
 							<ul class="">
 								<h3>2021</h3>
 								<li>
-									Miguel Arratia, Anja Butter, Mario Campanelli, Vincent Croft,  <br />
-									Dag Gillberg, Kristin Lohwasser, Bogdan Malaescu, Vinicius Mikuni, <br />
+									Ramon Winterhalder, Vitaly Magerya, Emilio Villa, Stephen P. Jones,<br />
+									Matthias Kerner, Anja Butter, Gudrun Heinrich, Tilman Plehn:<br />
+									<b>Targeting Multi-Loop Integrals with Neural Networks</b>.<br />
+									<em>arXiv:2112.09145 [hep-ph]</em><br />
+									<a href="https://arxiv.org/abs/2112.09145" target="_blank">[ArXiv]</a>
+								</li>
+								<br />
+								<li>
+									Miguel Arratia, Anja Butter, Mario Campanelli, Vincent Croft, Dag Gillberg,  <br />
+									Aishik Ghosh, Kristin Lohwasser, Bogdan Malaescu, Vinicius Mikuni, <br />
 									Benjamin Nachman, Juan Rojo, Jesse Thaler, Ramon Winterhalder:<br />
-									<b>Presenting Unbinned Differential Cross Section Results</b>.<br />
-									<em>arXiv:2109.13243 [hep-ph]</em><br />
+									<b>Publishing Unbinned Differential Cross Section Results</b>.<br />
+									<em>JINST 17 (2022) 01, P01024</em><br />
+									<a href="https://doi.org/10.1088/1748-0221/17/01/P01024" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2109.13243" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
 									Ramon Winterhalder, Marco Bellagente, Benjamin Nachman:<br />
 									<b>Latent Space Refinement for Deep Generative Models</b>.<br />
-									<em>arXiv:2106.00792 [stat.ML]</em><br />
+									<em>NeurIPS 2021 Workshop on DGMs and Downstream Applications</em><br />
+									<a href="https://github.com/dgms-and-applications/2021/raw/4f97edea18089f3e8543798681020183b9776bbb/latent_space_refinement_for_de.pdf" target="_blank">[Workshop]</a>
 									<a href="https://arxiv.org/abs/2106.00792" target="_blank">[ArXiv]</a>
 								</li>
-								<br />
+							</ul>
+
+							<ul class="">
+								<h3>2020</h3>
 								<li>
 									Mathias Backes, Anja Butter, Tilman Plehn, Ramon Winterhalder:<br />
 									<b>How to GAN Event Unweighting</b>.<br />
@@ -160,10 +173,7 @@
 									<a href="https://scipost.org/SciPostPhys.10.4.089" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2012.07873" target="_blank">[ArXiv]</a>
 								</li>
-							</ul>
-
-							<ul class="">
-								<h3>2020</h3>
+								<br />
 								<li>
 									Marco Bellagente, Anja Butter, Gregor Kasieczka, Tilman Plehn, <br />
 									Armand Rousselot, Ramon Winterhalder, Lynton Ardizzone, Ullrich Köthe:<br />
@@ -173,7 +183,10 @@
 									<a href="https://scipost.org/SciPostPhys.9.5.074" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2006.06685" target="_blank">[ArXiv]</a>
 								</li>
-								<br />
+							</ul>
+
+							<ul class="">
+								<h3>2019</h3>
 								<li>
 									Anja Butter, Tilman Plehn, Ramon Winterhalder: <br />
 									<b>How to GAN Event Subtraction</b>.<br />
@@ -191,10 +204,7 @@
 									<a href="https://scipost.org/SciPostPhys.8.4.070" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/1912.00477" target="_blank">[ArXiv]</a>
 								</li>
-							</ul>
-
-							<ul class="">
-								<h3>2019</h3>
+								<br />
 								<li>
 									Anja Butter, Tilman Plehn, Ramon Winterhalder: <br />
 									<b>How to GAN LHC Events</b>.<br />
