Add new publications

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								  <li>Generative models like generative adversarial networks</br> 
 									and normalizing flows</li>
 
-								  <li>Machine learning for problems in particle physics</li>
+								  <li>Machine learning to tackle problems in particle physics</li>
 								  
 								  <li>Monte-Carlo integration and event generation</li>
 								  
@@ -135,12 +135,39 @@
 							<p>This is a list of my publications in reverse-chronological order. All authors are listed alphabetically, 
 								following the convention in particle physics. Exceptions occur for some of the papers.</p>
 							<ul class="">
+								<h3>2022</h3>
+								<li>
+									J. M. Campbell, M. Diefenthaler, T. J. Hobbs, S. Höche, <br />
+									J. Isaacson, F. Kling, S. Mrenna, J. Reuter <i>et al.</i>:<br />
+									<b>Event Generators for High-Energy Physics Experiments</b>.<br />
+									<em>Contribution to Snowmass 2021</em><br />
+									<a href="https://arxiv.org/abs/2203.11110" target="_blank">[ArXiv]</a>
+								</li>
+								<br />
+								<li>
+									Anja Butter, Tilman Plehn, Steffen Schumann <i>et al.</i>:<br />
+									<b>Machine Learning and LHC Event Generation</b>.<br />
+									<em>Contribution to Snowmass 2021</em><br />
+									<a href="https://arxiv.org/abs/2203.07460" target="_blank">[ArXiv]</a>
+								</li>
+								<br />
+								<li>
+									Anja Butter, Sascha Diefenbacher, Gregor Kasieczka, Benjamin Nachman, <br />
+									Tilman Plehn, David Shih, Ramon Winterhalder:<br />
+									<b>Ephemeral Learning - Augmenting Triggers with Online-Trained Normalizing Flows</b>.<br />
+									<em>Submitted to SciPost</em><br />
+									<a href="https://arxiv.org/abs/2202.09375" target="_blank">[ArXiv]</a>
+								</li>
+							</ul>
+
+							<ul class="">
 								<h3>2021</h3>
 								<li>
 									Ramon Winterhalder, Vitaly Magerya, Emilio Villa, Stephen P. Jones,<br />
 									Matthias Kerner, Anja Butter, Gudrun Heinrich, Tilman Plehn:<br />
 									<b>Targeting Multi-Loop Integrals with Neural Networks</b>.<br />
-									<em>arXiv:2112.09145 [hep-ph]</em><br />
+									<em>SciPost Phys. 12, 129 (2022)</em><br />
+									<a href="https://doi.org/10.21468/SciPostPhys.12.4.129" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2112.09145" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
