Update Journal Ref
Add SciPost ref to OnlineFlow paper

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 									Anja Butter, Sascha Diefenbacher, Gregor Kasieczka, Benjamin Nachman, <br />
 									Tilman Plehn, David Shih, Ramon Winterhalder:<br />
 									<b>Ephemeral Learning - Augmenting Triggers with Online-Trained Normalizing Flows</b>.<br />
-									<em>Submitted to SciPost</em><br />
+									<em>SciPost Phys. 13, 087 (2022)</em><br />
+									<a href="https://doi.org/10.21468/SciPostPhys.13.4.087" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2202.09375" target="_blank">[ArXiv]</a>
 								</li>
 							</ul>
