Update with MadNIS paper

--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
 							<ul class="">
 								<h3>2022</h3>
 								<li>
+									T. Heimel, R. Winterhalder, A. Butter, J. Isaacson, <br />
+									C. Krause, F. Maltoni, O. Mattelaer, T. Plehn:<br />
+									<b>MadNIS &#8212; Neural Multi-Channel Importance Sampling</b>.<br />
+									<em>To be submitted to SciPost</em><br />
+									<a href="https://arxiv.org/abs/2212.06172" target="_blank">[ArXiv]</a>
+								</li>
+								<br />
+								<li>
 									J. M. Campbell, M. Diefenthaler, T. J. Hobbs, S. Höche, <br />
 									J. Isaacson, F. Kling, S. Mrenna, J. Reuter <i>et al.</i>:<br />
 									<b>Event Generators for High-Energy Physics Experiments</b>.<br />
@@ -154,7 +162,7 @@
 								<li>
 									Anja Butter, Sascha Diefenbacher, Gregor Kasieczka, Benjamin Nachman, <br />
 									Tilman Plehn, David Shih, Ramon Winterhalder:<br />
-									<b>Ephemeral Learning - Augmenting Triggers with Online-Trained Normalizing Flows</b>.<br />
+									<b>Ephemeral Learning &#8212; Augmenting Triggers with Online-Trained Normalizing Flows</b>.<br />
 									<em>SciPost Phys. 13, 087 (2022)</em><br />
 									<a href="https://doi.org/10.21468/SciPostPhys.13.4.087" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2202.09375" target="_blank">[ArXiv]</a>
