--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
 							<p>This is a list of my publications in reverse-chronological order. All authors are listed alphabetically, 
 								following the convention in particle physics. Exceptions occur for some of the papers.</p>
 							<ul class="">
+								<h3>2023</h3>
+								<li>
+									B. Nachman and R. Winterhalder:<br />
+									<b>ELSA &#8212; Enhanced latent spaces for improved collider simulations</b>.<br />
+									<em>To be submitted to a journal</em><br />
+									<a href="https://arxiv.org/abs/2305.07696" target="_blank">[ArXiv]</a>
+								</li>
 								<h3>2022</h3>
 								<li>
 									T. Heimel, R. Winterhalder, A. Butter, J. Isaacson, <br />
@@ -156,6 +163,8 @@
 									Anja Butter, Tilman Plehn, Steffen Schumann <i>et al.</i>:<br />
 									<b>Machine Learning and LHC Event Generation</b>.<br />
 									<em>Contribution to Snowmass 2021</em><br />
+									<em>SciPost Phys. 14, 079 (2023)</em><br />
+									<a href="https://scipost.org/SciPostPhys.14.4.079" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2203.07460" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
