--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
 									<em>To be submitted to a journal</em><br />
 									<a href="https://arxiv.org/abs/2305.07696" target="_blank">[ArXiv]</a>
 								</li>
+							</ul>
+							
+							<ul class="">
 								<h3>2022</h3>
 								<li>
 									T. Heimel, R. Winterhalder, A. Butter, J. Isaacson, <br />
