--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									  <p class="course">MSc in Physics, 2017</p>
 									  <p class="institution">
 
-									  Advisor: <a href="http://portal.uni-freiburg.de/ag-dittmaier/stefan-dittmaier" target="_blank">Stefan Dittmaier</a>
+									  Advisor: <a href="https://www.tep.physik.uni-freiburg.de/stefan-dittmaier" target="_blank">Stefan Dittmaier</a>
 									  
 									  </p>
 									  <p class="institution">University of Freiburg</p>
@@ -90,7 +90,7 @@
 									  <p class="course">BSc in Physics, 2014</p>
 									  <p class="institution">
 
-									  Advisor: <a href="http://portal.uni-freiburg.de/ag-dittmaier/stefan-dittmaier" target="_blank">Stefan Dittmaier</a>
+									  Advisor: <a href="https://www.tep.physik.uni-freiburg.de/stefan-dittmaier" target="_blank">Stefan Dittmaier</a>
 									  
 									  </p>
 									  <p class="institution">University of Freiburg</p>
