--- a/index.html
+++ b/index.html
@@ -137,9 +137,16 @@
 							<ul class="">
 								<h3>2023</h3>
 								<li>
+									S. Dittmaier, P. Maierhöfer, C. Schwan, R. Winterhalder: <br />
+									<b>Like-Sign W-Boson Scattering at the LHC &#8212; Approximations and Full Next-to-Leading-Order Predictions</b><br />
+									<em>Submitted to JHEP</em><br />
+									<a href="https://arxiv.org/abs/2308.16716" target="_blank">[ArXiv]</a>
+								</li>
+								<br />
+								<li>
 									B. Nachman and R. Winterhalder:<br />
-									<b>ELSA &#8212; Enhanced latent spaces for improved collider simulations</b>.<br />
-									<em>To be submitted to a journal</em><br />
+									<b>ELSA &#8212; Enhanced latent spaces for improved collider simulations</b><br />
+									<em>Accepted in EPJ C</em><br />
 									<a href="https://arxiv.org/abs/2305.07696" target="_blank">[ArXiv]</a>
 								</li>
 							</ul>
@@ -149,22 +156,22 @@
 								<li>
 									T. Heimel, R. Winterhalder, A. Butter, J. Isaacson, <br />
 									C. Krause, F. Maltoni, O. Mattelaer, T. Plehn:<br />
-									<b>MadNIS &#8212; Neural Multi-Channel Importance Sampling</b>.<br />
-									<em>To be submitted to SciPost</em><br />
+									<b>MadNIS &#8212; Neural Multi-Channel Importance Sampling</b><br />
+									<em>Submitted to SciPost</em><br />
 									<a href="https://arxiv.org/abs/2212.06172" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
 									J. M. Campbell, M. Diefenthaler, T. J. Hobbs, S. Höche, <br />
 									J. Isaacson, F. Kling, S. Mrenna, J. Reuter <i>et al.</i>:<br />
-									<b>Event Generators for High-Energy Physics Experiments</b>.<br />
+									<b>Event Generators for High-Energy Physics Experiments</b><br />
 									<em>Contribution to Snowmass 2021</em><br />
 									<a href="https://arxiv.org/abs/2203.11110" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
 									Anja Butter, Tilman Plehn, Steffen Schumann <i>et al.</i>:<br />
-									<b>Machine Learning and LHC Event Generation</b>.<br />
+									<b>Machine Learning and LHC Event Generation</b><br />
 									<em>Contribution to Snowmass 2021</em><br />
 									<em>SciPost Phys. 14, 079 (2023)</em><br />
 									<a href="https://scipost.org/SciPostPhys.14.4.079" target="_blank">[Journal]</a>
@@ -174,7 +181,7 @@
 								<li>
 									Anja Butter, Sascha Diefenbacher, Gregor Kasieczka, Benjamin Nachman, <br />
 									Tilman Plehn, David Shih, Ramon Winterhalder:<br />
-									<b>Ephemeral Learning &#8212; Augmenting Triggers with Online-Trained Normalizing Flows</b>.<br />
+									<b>Ephemeral Learning &#8212; Augmenting Triggers with Online-Trained Normalizing Flows</b><br />
 									<em>SciPost Phys. 13, 087 (2022)</em><br />
 									<a href="https://doi.org/10.21468/SciPostPhys.13.4.087" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2202.09375" target="_blank">[ArXiv]</a>
@@ -186,7 +193,7 @@
 								<li>
 									Ramon Winterhalder, Vitaly Magerya, Emilio Villa, Stephen P. Jones,<br />
 									Matthias Kerner, Anja Butter, Gudrun Heinrich, Tilman Plehn:<br />
-									<b>Targeting Multi-Loop Integrals with Neural Networks</b>.<br />
+									<b>Targeting Multi-Loop Integrals with Neural Networks</b><br />
 									<em>SciPost Phys. 12, 129 (2022)</em><br />
 									<a href="https://doi.org/10.21468/SciPostPhys.12.4.129" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2112.09145" target="_blank">[ArXiv]</a>
@@ -196,7 +203,7 @@
 									Miguel Arratia, Anja Butter, Mario Campanelli, Vincent Croft, Dag Gillberg,  <br />
 									Aishik Ghosh, Kristin Lohwasser, Bogdan Malaescu, Vinicius Mikuni, <br />
 									Benjamin Nachman, Juan Rojo, Jesse Thaler, Ramon Winterhalder:<br />
-									<b>Publishing Unbinned Differential Cross Section Results</b>.<br />
+									<b>Publishing Unbinned Differential Cross Section Results</b><br />
 									<em>JINST 17 (2022) 01, P01024</em><br />
 									<a href="https://doi.org/10.1088/1748-0221/17/01/P01024" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2109.13243" target="_blank">[ArXiv]</a>
@@ -204,7 +211,7 @@
 								<br />
 								<li>
 									Ramon Winterhalder, Marco Bellagente, Benjamin Nachman:<br />
-									<b>Latent Space Refinement for Deep Generative Models</b>.<br />
+									<b>Latent Space Refinement for Deep Generative Models</b><br />
 									<em>NeurIPS 2021 Workshop on DGMs and Downstream Applications</em><br />
 									<a href="https://github.com/dgms-and-applications/2021/raw/4f97edea18089f3e8543798681020183b9776bbb/latent_space_refinement_for_de.pdf" target="_blank">[Workshop]</a>
 									<a href="https://arxiv.org/abs/2106.00792" target="_blank">[ArXiv]</a>
@@ -215,9 +222,8 @@
 								<h3>2020</h3>
 								<li>
 									Mathias Backes, Anja Butter, Tilman Plehn, Ramon Winterhalder:<br />
-									<b>How to GAN Event Unweighting</b>.<br />
+									<b>How to GAN Event Unweighting</b><br />
 									<em>SciPost Phys. 10, 089 (2021)</em><br />
-									<a href="data/publications/weightedgan.pdf" target="_blank">[PDF]</a>
 									<a href="https://scipost.org/SciPostPhys.10.4.089" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2012.07873" target="_blank">[ArXiv]</a>
 								</li>
@@ -225,9 +231,8 @@
 								<li>
 									Marco Bellagente, Anja Butter, Gregor Kasieczka, Tilman Plehn, <br />
 									Armand Rousselot, Ramon Winterhalder, Lynton Ardizzone, Ullrich Köthe:<br />
-									<b>Invertible Networks or Partons to Detector and Back Again</b>.<br />
+									<b>Invertible Networks or Partons to Detector and Back Again</b><br />
 									<em>SciPost Phys. 9, 074 (2020) </em><br />
-									<a href="data/publications/cinn.pdf" target="_blank">[PDF]</a>
 									<a href="https://scipost.org/SciPostPhys.9.5.074" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2006.06685" target="_blank">[ArXiv]</a>
 								</li>
@@ -237,27 +242,24 @@
 								<h3>2019</h3>
 								<li>
 									Anja Butter, Tilman Plehn, Ramon Winterhalder: <br />
-									<b>How to GAN Event Subtraction</b>.<br />
+									<b>How to GAN Event Subtraction</b><br />
 									<em>SciPost Phys. Core 3, 009 (2020) </em><br />
-									<a href="data/publications/subgan.pdf" target="_blank">[PDF]</a>
 									<a href="https://scipost.org/SciPostPhysCore.3.2.009" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/1912.08824" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
 									Marco Bellagente, Anja Butter, Gregor Kasieczka, Tilman Plehn, Ramon Winterhalder: <br />
-									<b>How to GAN away Detector Effects</b>.<br />
+									<b>How to GAN away Detector Effects</b><br />
 									<em>SciPost Phys. 8, 070 (2020) </em><br />
-									<a href="data/publications/fcgan.pdf" target="_blank">[PDF]</a>
 									<a href="https://scipost.org/SciPostPhys.8.4.070" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/1912.00477" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
 								<li>
 									Anja Butter, Tilman Plehn, Ramon Winterhalder: <br />
-									<b>How to GAN LHC Events</b>.<br />
+									<b>How to GAN LHC Events</b><br />
 									<em>SciPost Phys. 7, 075 (2019) </em><br />
-									<a href="data/publications/eventgan.pdf" target="_blank">[PDF]</a>
 									<a href="https://scipost.org/SciPostPhys.7.6.075" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/1907.03764" target="_blank">[ArXiv]</a>
 								</li>
