--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 						I am a postdoctoral researcher at the <a href="https://uclouvain.be/en/research-institutes/irmp/cp3" target="_blank"> CP3</a> 
 						in Louvain-la-Neuve.
 						I work on the intersection of particle physics and machine learning. My research
-					        aims to fully establish data-driven techniques in high-energy physics and to
+						aims to fully establish data-driven techniques in high-energy physics and to
 						enhance standard simulation methods with (generative) neural networks.
+						Additionally, my interests extend to simulation-based inference, which is crucially dependend
+						on first-principle simulations provided by theory.
 						</p>
 
 						<div class="row">
@@ -109,8 +111,10 @@
 								<h3>Research interests</h3>
 								<ul class="ul-interests">
 								  
-								  <li>Generative models like generative adversarial networks</br> 
-									and normalizing flows</li>
+								  <li>Generative models like generative adversarial networks,</br> 
+									normalizing flows and other novel architectures</li>
+
+								  <li>Simulation-based inference</li>
 
 								  <li>Machine learning to tackle problems in particle physics</li>
 								  
