Add inspire and scholar etc + update publications

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<title>Ramon Winterhalder</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />		
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/academicons.css"/>		
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -27,7 +28,9 @@
 					<h1><strong>Ramon Winterhalder</strong></h1>
 					<p>Postdoctoral Researcher in Physics</p>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/ramonwinterhalder/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://orcid.org/0000-0002-9902-578X" class="ai ai-orcid ai-2x" target="_blank"></a></li>
+						<li><a href="https://inspirehep.net/authors/1794691" class="ai ai-inspire ai-2x" target="_blank"></a></li>
+						<li><a href="https://scholar.google.com/citations?user=AXezCSUAAAAJ" class="ai ai-google-scholar ai-2x" target="_blank"></a></li>
 						<li><a href="https://github.com/ramonpeter" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 						<li><a href="mailto:ramon.winterhalder@uclouvain.be" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
@@ -152,7 +155,8 @@
 								<li>
 									B. Nachman and R. Winterhalder:<br />
 									<b>ELSA &#8212; Enhanced latent spaces for improved collider simulations</b><br />
-									<em>Accepted in EPJ C</em><br />
+									<em>Eur. Phys. J. C 83, 843 (2023)</em><br />
+									<a href="https://link.springer.com/article/10.1140/epjc/s10052-023-11989-8" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2305.07696" target="_blank">[ArXiv]</a>
 								</li>
 							</ul>
@@ -163,7 +167,7 @@
 									T. Heimel, R. Winterhalder, A. Butter, J. Isaacson, <br />
 									C. Krause, F. Maltoni, O. Mattelaer, T. Plehn:<br />
 									<b>MadNIS &#8212; Neural Multi-Channel Importance Sampling</b><br />
-									<em>Submitted to SciPost</em><br />
+									<em>Accepted in SciPost Physics</em><br />
 									<a href="https://arxiv.org/abs/2212.06172" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
