Add MadNIS journal ref

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
 									T. Heimel, R. Winterhalder, A. Butter, J. Isaacson, <br />
 									C. Krause, F. Maltoni, O. Mattelaer, T. Plehn:<br />
 									<b>MadNIS &#8212; Neural Multi-Channel Importance Sampling</b><br />
-									<em>Accepted in SciPost Physics</em><br />
+									<em>SciPost Phys. 15, 141 (2023)</em><br />
+									<a href="https://scipost.org/10.21468/SciPostPhys.15.4.141" target="_blank">[Journal]</a>
 									<a href="https://arxiv.org/abs/2212.06172" target="_blank">[ArXiv]</a>
 								</li>
 								<br />
